--- a/app/src/main/res/layout/activity_personal_page.xml
+++ b/app/src/main/res/layout/activity_personal_page.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:background="#DADADA">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,8 +61,7 @@
                 android:id="@+id/eventsList"
                 android:layout_width="match_parent"
                 android:layout_height="260dp"
-                android:background="#FFFFFF"
-                android:elevation="4dp">
+                android:background="#FFFFFF">
 
             </ListView>
 
@@ -70,7 +69,7 @@
                 android:id="@+id/textMyTasks"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="44dp"
+                android:layout_marginTop="64dp"
                 android:gravity="center"
                 android:text="My Tasks"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -80,8 +79,7 @@
                 android:id="@+id/taskList"
                 android:layout_width="match_parent"
                 android:layout_height="247dp"
-                android:background="#FFFFFF"
-                android:elevation="4dp" />
+                android:background="#FFFFFF" />
 
             <TextView
                 android:id="@+id/textMyStats"
