--- a/app/src/main/res/drawable/button_custom.xml
+++ b/app/src/main/res/drawable/button_custom.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/button_pressed"
-        android:state_pressed="true" />
-    <item android:drawable="@drawable/button_selector"
-        android:state_focused="true" />
-    <item android:drawable="@drawable/button_default" />
-</selector>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorAccentLight">
+    <item>
+        <selector>
+
+
+            <item android:id="@android:id/background"
+                android:drawable="@drawable/buttonflat" />
+
+        </selector>
+    </item>
+</ripple>
