--- a/app/src/main/res/layout/activity_brown_noise.xml
+++ b/app/src/main/res/layout/activity_brown_noise.xml
@@ -10,7 +10,7 @@
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="225dp"
-        android:background="@drawable/ic_launcher_background"
+        android:background="@color/colorPrimaryDark"
         android:elevation="2dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
