--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -10,8 +10,8 @@
     <CalendarView
         android:id="@+id/calendarView"
         style="@android:style/Widget.DeviceDefault.CalendarView"
-        android:layout_width="394dp"
-        android:layout_height="375dp"
+        android:layout_width="408dp"
+        android:layout_height="339dp"
         android:layout_marginTop="45dp"
         android:layout_marginBottom="311dp"
         android:selectedDateVerticalBar="@drawable/button_default"
@@ -23,16 +23,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+
     <EditText
         android:id="@+id/textInputCalend"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="48dp"
         android:hint="Select a date and write your task here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
 
     <LinearLayout
         android:layout_width="334dp"
