--- a/app/src/main/res/layout/activity_card_maker.xml
+++ b/app/src/main/res/layout/activity_card_maker.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#DADADA"
     tools:context=".Tools.MemoryCards.CardMaker">
 
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="225dp"
-        android:background="@drawable/ic_launcher_background"
+        android:background="@color/colorPrimaryDark"
         android:elevation="2dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="32dp"
-        android:background="#FFFFFF"
+        android:background="#DADADA"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
