--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,15 +5,19 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#DADADA"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:outlineProvider="none"
     tools:context=".Login">
 
     <LinearLayout
         android:layout_width="411dp"
         android:layout_height="267dp"
-        android:background="@drawable/ic_launcher_background"
-        android:elevation="16dp"
+        android:background="@color/colorPrimaryDark"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:elevation="8dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,9 +26,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="253dp"
             app:srcCompat="@drawable/stud_orange" />
     </LinearLayout>
 
@@ -61,24 +64,19 @@
     <Button
         android:id="@+id/login"
         style="@style/flatButton"
-        android:layout_width="101dp"
-        android:layout_height="44dp"
-        android:layout_gravity="start"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="64dp"
+        android:layout_width="133dp"
+        android:layout_height="63dp"
         android:background="@drawable/button_custom"
-        android:elevation="8dp"
+        android:elevation="4dp"
         android:onClick="mainActivityBtnPressed"
-        android:outlineProvider="background"
         android:shadowColor="#100F0F"
+        android:stateListAnimator="@null"
         android:text="@string/action_sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.031" />
+        app:layout_constraintVertical_bias="0.231" />
 
     <Button
         android:id="@+id/register"
