--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4CAF50</color>
-    <color name="colorPrimaryDark">#00b248</color>
+    <color name="colorPrimary">#00b248</color>
+    <color name="colorPrimaryDark">#008119</color>
     <color name="colorAccent">#FFC107</color>
 
     <color name="colorPrimaryLight">#C8E6C9</color>
     <color name="colorAccentDark">#005cb2</color>
-    <color name="colorAccentLight">#97F19B</color>
+    <color name="colorAccentLight">#58e576</color>
     <color name="colorOnPrimary">@color/white</color>
     <color name="colorRipple">@color/white_2</color>
 
